syntax = "proto3";
package timesman;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service TimesMan {
  rpc GetTimes(google.protobuf.Empty) returns (TimesArray);
  rpc CreateTimes(TimesTitle) returns (Times);
  rpc DeleteTimes(TimesId) returns (google.protobuf.Empty);
  rpc UpdateTimes(Times) returns (Times);

  rpc GetPosts(TimesId) returns (PostArray);
  rpc CreatePost(CreatePostPrams) returns (Post);
  rpc DeletePost(DeletePostParam) returns (google.protobuf.Empty);
  rpc UpdatePost(UpdatePostParam) returns (Post);

  rpc GetTodos(TimesId) returns (TodoArray);
  rpc CreateTodo(CreateTodoParams) returns (Todo);
  rpc DoneTodo(DoneTodoParams) returns (Todo);
  rpc GetTodoDetail(TodoDetailParams) returns (Todo);
  rpc UpdateTodoDetail(UpdateTodoDetailParams) returns (Todo);
}

message PostId { uint64 id = 1; }

message TimesId { uint64 id = 1; }

message TodoId { uint64 id = 1; }

message TimesArray { repeated Times timeses = 1; }

message PostArray { repeated Post posts = 1; }

message TodoArray { repeated Todo todos = 1; }

message TimesTitle { string title = 1; }

message PostText { string text = 1; }

message CreatePostPrams {
  uint64 id = 1;
  string text = 2;
}

message DeletePostParam {
  uint64 tid = 1;
  uint64 pid = 2;
}

message UpdatePostParam {
  uint64 tid = 1;
  Post post = 2;
}

message CreateTodoParams {
  uint64 tid = 1;
  string content = 2;
  optional string detail = 3;
}

message DoneTodoParams {
  uint64 tid = 1;
  uint64 tdid = 2;
  bool done = 3;
}

message TodoDetailParams {
  uint64 tid = 1;
  uint64 tdid = 2;
}

message UpdateTodoDetailParams {
  uint64 tid = 1;
  uint64 tdid = 2;
  string detail = 3;
}

message Times {
  uint64 id = 1;
  string title = 2;
  google.protobuf.Timestamp created_at = 3;
  optional google.protobuf.Timestamp updated_at = 4;
}

message Post {
  uint64 id = 1;
  string post = 2;
  google.protobuf.Timestamp created_at = 3;
  optional google.protobuf.Timestamp updated_at = 4;
  optional uint64 tagid = 5;
}

message Todo {
  uint64 id = 1;
  string content = 2;
  optional string detail = 3;
  google.protobuf.Timestamp created_at = 4;
  optional google.protobuf.Timestamp done_at = 5;
}
